--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   },
   "dependencies": {
     "babel-runtime": "6.18.0",
-    "material-ui": "^0.16.6",
+    "material-ui": "^0.16.5",
     "meteor-node-stubs": "~0.2.0",
     "react": "^15.4.2",
     "react-addons-pure-render-mixin": "^15.4.2",
+    "react-bootstrap": "^0.30.7",
+    "react-bootstrap-table": "^3.0.0-beta.6",
     "react-dom": "^15.4.2",
+    "react-motion": "^0.4.7",
     "react-router": "^3.0.0",
+    "react-swipeable-views": "^0.10.3",
     "react-tap-event-plugin": "^2.0.1"
   }
 }
